# URL2Notion

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml  test.db
.devcontainer/: Dockerfile  devcontainer.json
src/: app.py  main.py
